[project]
name = "wclock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.7",
    "psutil>=7.1.3",
    "pyqt6>=6.10.0",
    "pyserial>=3.5",
    "pytz>=2025.2",
    "requests>=2.32.5",
]
