[project]
name = "wclock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.8",
    "psutil>=7.2.2",
    "pyqt6>=6.10.2",
    "pyserial>=3.5",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
]
